--- a/style.css
+++ b/style.css
@@ -43,7 +43,12 @@ body {
 }
 
 .logo{
-    font-size: 48px;
+    font-size: 40px;
+    
+}
+.logo img{
+    align-items: left;
+    height: 50px;
 }
 
 .nav-list{
@@ -90,19 +95,20 @@ body {
     transition: 0.3s;
 }
 /*Configuraçoes do inicio*/
-section#start{
-    margin: 80px;
+main{
+    margin-top: 50px;
 }
-section#start, h1{
+section#start h1{
+    margin-top: 10px;
     text-align: center;
     font-size: 25px;
 }
 section#start, p{
-    font-size: small;
+    font-size: 14px;
     text-align: center;
     margin: 10px;
 }
-img{
+section#start img{
     height: 400px;
     max-width: 800px;
    justify-content: center;
@@ -191,7 +197,7 @@ section.especialidades .lex {
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: #7b7676 ;
+            background: #8c8787 ;
             clip-path: circle(100px at 90% -15%);
             transition: 1s ease-in-out;
             flex-direction: column;
