--- a/style.css
+++ b/style.css
@@ -145,8 +145,8 @@ section,text, p{
 }
 /* config no port*/
 section.especialidades {
-    padding: 180px 4%;
-    color: #ABA7A4;
+    padding: 10px 4%;
+    color: #595353;
 
 }
 
