--- a/style.css
+++ b/style.css
@@ -208,8 +208,8 @@ section.especialidades .lex {
 
     }
     .amigo img{
-        height: 200px;
-        width: 200px;
+        height: 250px;
+        width: 250px;
         border-radius: 20px;
         box-shadow: 5px 5px 5px black;
     }
@@ -232,6 +232,22 @@ section.especialidades .lex {
         color: rgb(45, 46, 46);
     
     }
+    .botaosocial button {
+        width: 60px;
+        height: 60px;
+        border-radius: 35%;
+        border: none;
+        background-color: rgb(123, 117, 117);
+        font-size: 22px;
+        cursor: pointer;
+        margin: 0 5px;
+        transition: 0.2s;
+    }
+    
+    .botaosocial button:hover {
+        box-shadow: 0px 0px 8px rgb(139, 137, 137);
+        transform: scale(1.05);
+    }
     
     .vex {
         display: flex;
@@ -245,7 +261,7 @@ section.especialidades .lex {
     footer img {
         height: 90px;
         width: 90px;
-        border-radius: 50%;
+        border-radius: 10%;
     }
     flex{
         display: flex;
