--- a/style.css
+++ b/style.css
@@ -341,4 +341,64 @@ section.especialidades .lex {
             top: -7px;
         }
     }
+    @media (min-width: 750px){
+        .nav-list{
+            display: flex;
+            gap: 32px;
+            list-style: none;
+        }
+        
+        .nav-list a{
+            color: #0f0e0e;
+            
+        }
+        .hamburger{
+            display: none;
+        }
+        
+        .hamburger::before {
+            display: none; 
+        }
+        
+        .hamburger::after {
+            display: none; 
+        }
+
+
+
+        main{
+            margin-top: 50px;
+            
+        }
+        section#start h1{
+            margin: 20px;
+            text-align: left;
+            font-weight: bolder;
+            font-size: 25px;
+            
+        }
+        span{
+            color: #71645c;
+        }
+        section#start p{
+            font-size: 14px;
+            text-align: left;
+            margin: 10px;
+        }
+        section#start img{
+            height: 500px;
+            max-width: 800px;
+           justify-content: center;
+           border-radius: 40px 40px 40px 40px;
+           display: block;
+           margin: 0 auto;
+           background-color: #97918d;
+           box-shadow: 5px 5px 5px #000000;
+        }
+        .botao1{
+            display: none;
+        }
+        
+
+    }
     
